# AoC2021

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
day1/: CMakeLists.txt  part1.cpp  part2.cpp
day10/: CMakeLists.txt  part1.cpp  part2.cpp
day11/: CMakeLists.txt  part1.cpp  part2.cpp
day12/: CMakeLists.txt  part1.cpp  part2.cpp
day13/: CMakeLists.txt  part1.cpp  part2.cpp
day14/: CMakeLists.txt  part1.cpp  part2.cpp
day15/: CMakeLists.txt  part1.cpp  part2.cpp
day16/: CMakeLists.txt  part1and2.cpp
day17/: CMakeLists.txt  part1and2.cpp
day18/: CMakeLists.txt  part1and2.cpp
day19/: CMakeLists.txt  helper_functions.hpp  part1and2.cpp  rotations.hpp
day2/: CMakeLists.txt  part1.cpp  part2.cpp
day20/: CMakeLists.txt  part1and2.cpp
day21/: CMakeLists.txt  part1.cpp  part2.cpp
day22/: CMakeLists.txt  day22_2d.cpp  part1.cpp  part2.cpp
day23/: CMakeLists.txt  part1.cpp  part2.cpp
day24/: CMakeLists.txt  part1and2.cpp
day25/: CMakeLists.txt  part1.cpp
day3/: CMakeLists.txt  part1.cpp  part2.cpp
day4/: CMakeLists.txt  part1.cpp  part2.cpp
day5/: CMakeLists.txt  part1.cpp  part2.cpp
day6/: CMakeLists.txt  part1.cpp  part2.cpp
day7/: CMakeLists.txt  part1.cpp  part2.cpp
day8/: CMakeLists.txt  part1.cpp  part2.cpp
day9/: CMakeLists.txt  part1.cpp  part2.cpp
